# search_vacancies

./: README.md  pyproject.toml
data/: vacancies.json
src/: api_service.py  interface_by_hh.py  interface_by_vacancies_json.py  main.py  service_by_vacancies_json.py  sorted_by_salary.py  user_interface.py  vacancy_manager.py
